# bluesorrow

./: README.org
{{ cookiecutter.project_slug }}/: BUILD.bazel  MODULE.bazel
{{ cookiecutter.project_slug }}/cmd/: BUILD.bazel
