load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//:{{ cookiecutter.project_slug }}",
        "@com_github_taylormonacelli_goldbug//:goldbug",
    ],
)

go_binary(
    name = "{{ cookiecutter.project_slug }}",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
